# 42-Python-Modules

./: .gitignore
Python-00/ex0/: ft_hello_garden.py
Python-00/ex1/: ft_plot_area.py
Python-00/ex2/: ft_harvest_total.py
Python-00/ex3/: ft_plant_age.py
Python-00/ex4/: ft_water_reminder.py
Python-00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python-00/ex6/: ft_garden_summary.py
Python-00/ex7/: ft_seed_inventory.py
Python-01/ex0/: ft_garden_intro.py
Python-01/ex1/: ft_garden_data.py
Python-01/ex2/: ft_plant_growth.py
Python-01/ex3/: ft_plant_factory.py
Python-01/ex4/: ft_garden_security.py
Python-01/ex5/: ft_plant_types.py
Python-01/ex6/: ft_garden_analytics.py
Python-02/ex0/: ft_first_execption.py
Python-02/ex1/: ft_different_errors.py
Python-02/ex2/: ft_custom_errors.py
Python-02/ex3/: ft_finally_bock.py
Python-02/ex4/: ft_raise_errors.py
Python-02/ex5/: ft_garden_management.py
Python-03/ex0/: ft_command_quest.py
Python-03/ex1/: ft_score_analytics.py
Python-03/ex2/: ft_coordinate_system.py
Python-03/ex3/: ft_achievement_tracker.py
Python-03/ex4/: ft_inventory_system.py
Python-03/ex5/: ft_data_stream.py
Python-03/ex6/: ft_analytics_dashboard.py
Python-04/ex0/: ft_ancient_text.py
Python-04/ex02/: ft_stream_management.py
Python-04/ex1/: ft_archive_creation.py
Python-06/: ft_circulat_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python-07/: battly.py  capacitor.py  tournament.py
Python-08/ex1/: loading.py  pyproject.toml  requirements.txt
(+49 files in other folders)
